tests/error/py_errors/list_different_tys.err
Error: Unsupported list (at $FILE:6:14)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     return py([1, 1.0])
  |               ^^^^^^^^ List contains elements with different types

Guppy compilation failed due to 1 previous error
